--- a/home.html
+++ b/home.html
@@ -6,33 +6,13 @@
   <body>
     <ul id="messages"></ul>
 
-      <input id="messagebox" autocomplete="off" /><button id = "sendbutton">Send</button>
-      <input id="nickname"/><button id = "nickbutton">Set nickname</button>
-
+    <input id="messagebox" autocomplete="off" /><button id = "sendbutton">Send</button>
+    <input id="nickname"/><button id = "nickbutton">Set nickname</button>
+      
+    <p id="users"></p>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-    var nickname="";
-      const socket = io();
-
-
-      $('#nickbutton').click(()=>{
-          socket.emit('nickname', $('#nickname').val());
-          nickname= $("#nickname").val();
-      })
-
-      $('#sendbutton').click(()=>{
-        socket.emit('chat message', $('#messagebox').val());
-        $('#messagebox').val('');
-        return false;
-      });
-      socket.on('chat message', function(message){
-        $('#messages').append($('<li>').text(message['nick'] +": "+message['msg']));
-      });
-      socket.on('disconnection',(data)=>{
-        $('#messages').append($('<li>').text(data +" disconnected"));
-      });
-    </script>
+    <script src="scripts.js"></script>
   </body>
 </html>
