added a stylesheet: better seperation of different users and yourself.

--- a/home.html
+++ b/home.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>Socket.IO chat</title>
+    <link rel="stylesheet" type="text/css" href="chatStyle.css" />
   </head>
   <body>
     <ul id="messages"></ul>
 
     <input id="messagebox" autocomplete="off" /><button id = "sendbutton">Send</button>
     <input id="nickname"/><button id = "nickbutton">Set nickname</button>
-      
     <p id="users"></p>
 
     <script src="/socket.io/socket.io.js"></script>
